--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="d-flex justify-content-center">
                 <lottie-player src="https://assets10.lottiefiles.com/private_files/lf30_mywfoph1.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
             </div>
-                <h1>Will you be my Wife🥰?</h1>
+                <h1>Will you be my Wife Varsha🥰?</h1>
             <div class="d-flex justify-content-center">
                 <button onclick="propose()" class="btn btn-primary">Yes!</button> <br>
                 <button onclick="propose()" class="btn btn-primary">Of Course, Yes!</button>
@@ -28,7 +28,7 @@
             <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_utsfwa3k.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay></lottie-player>
             <h1 class="ml6" >
                 <span class="text-wrapper">
-                    <span class="letters">I Love you!</span>
+                    <span class="letters">I Love you so much Varsha!</span>
                 </span>
             </h1>
         </div>
